[gd_scene load_steps=4 format=3 uid="uid://knxrfrj74kbm"]

[ext_resource type="Script" path="res://Scripts/User Interface/ChapterMenu.gd" id="1_2ehpc"]
[ext_resource type="FontFile" uid="uid://ckv4g6uel7i3t" path="res://Fonts/Quicksand-VariableFont_wght.ttf" id="2_owmyr"]

[sub_resource type="LabelSettings" id="LabelSettings_wtg5d"]
font = ExtResource("2_owmyr")
font_size = 20

[node name="ChapterMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ehpc")
scene = "Level01"
first_scene = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 309.0
offset_right = -309.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LblTitle" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "CHAPTER_0"
label_settings = SubResource("LabelSettings_wtg5d")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LblDescription" type="Label" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2
text = "CHAPTER_0_DESCRIPTION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnStart" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "START_GAME"

[node name="Timer" type="Timer" parent="."]

[connection signal="button_down" from="Panel/VBoxContainer/BtnStart" to="." method="_on_btn_start_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
